# SOME-REPORTING-PDF

./: .commitlintrc.json  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  cliff.toml  docker-compose.yml  grafana-reporter.service  planning.md  pyproject.toml
.github/instructions/: copilot_instructions.md.instructions.md
.github/workflows/: ci.yml
backend/: cli.py  create_admin.py  locustfile.py  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 14409ba5b427_add_pdf_templates_table.py  776166b7436c_create_users_reports_schedules.py  a2b3c4d5e6f7_add_cascade_roles_audit_schedule_fields.py
backend/app/: celery_app.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  i18n.py  logging_config.py  metrics.py  middleware.py  permissions.py  rate_limit.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  org_member.py  organization.py  pdf_template.py  (+3 more)
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_grafana.py  test_i18n.py  test_integrations.py  test_ldap_totp_pdf.py  test_organizations.py  test_pdf_engine.py  test_pdf_enhancements.py  test_rbac_audit.py  test_reports.py  test_schedules.py  test_security.py
frontend/: index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
frontend/e2e/: dashboards.spec.js  login.spec.js  navigation.spec.js  pwa.spec.js
frontend/src/: App.jsx  index.css  main.jsx
helm/grafana-reporter/: Chart.yaml  values.yaml
(+72 files in other folders)
